--- a/index.html
+++ b/index.html
@@ -27,22 +27,25 @@
     </style>
   </head>
   <body>
-    <div id="card__container">
-      <div id="card">
-        <img id="qr" src="/QR_Card_Publish/images/image-qr-code.png" />
-        <h2>Improve your front-end skills by building projects</h2>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+    <main>
+      <div id="card__container">
+        <div id="card">
+          <img id="qr" src="/images/image-qr-code.png" alt="QR Code" />
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://andreidev.w3spaces.com/">Andrei Neacsu</a>.
-    </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://andreidev.w3spaces.com/">Andrei Neacsu</a>.
+      </div>
+    </footer>
   </body>
 </html>
