--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     </style>
   </head>
   <body>
+    <main>
     <div id="card__container">
       <div id="card">
-        <img id="qr" src="/QR_Card_Publish/images/image-qr-code.png" />
+        <img id="qr" src="/QR_Card_Publish/images/image-qr-code.png" alt="QR code"/>
         <h2>Improve your front-end skills by building projects</h2>
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
@@ -37,12 +38,14 @@
         </p>
       </div>
     </div>
-
+    </main>
+<footer>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://andreidev.w3spaces.com/">Andrei Neacsu</a>.
     </div>
+  <footer>
   </body>
 </html>
