--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="https://andreidev.w3spaces.com/">Andrei Neacsu</a>.
     </div>
-  <footer>
+  </footer>
   </body>
 </html>
